Added full application in spec, service and generators
