# record-controlled-work-api/open-api-specification.yml
@@ -43,7 +43,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ApplicationResponse"
+                $ref: "#/components/schemas/Application"
         '401':
           description: Unauthorized
         '403':
@@ -215,7 +215,7 @@ components:
       items:
         $ref: "#/components/schemas/ApplicationOverview"
 
-    ApplicationResponse:
+    Application:
       type: object
       required:
         - id
@@ -226,6 +226,10 @@ components:
         - createdBy
         - modifiedAt
         - modifiedBy
+        - clientDetails
+        - applicationState
+        - ecfFlag
+        - applicationType
       properties:
         id:
           type: string
@@ -239,16 +243,17 @@ components:
         providerOfficeId:
           type: string
           format: uuid
-
-        meansAssessmentStatus:
+        meansAssessmentId:
           type: string
           format: uuid
-        applicationState:
-          $ref: "#/components/schemas/ApplicationState"
+        clientDetails:
+          $ref: "#/components/schemas/ClientDetails"
+        applicationStatus:
+          $ref: "#/components/schemas/ApplicationStatus"
         declaration:
-          $ref: "#/components/schemas/DeclarationResponse"
+          $ref: "#/components/schemas/Declaration"
         evidence:
-          $ref: "#/components/schemas/EvidenceResponse"
+          $ref: "#/components/schemas/Evidence"
         reasonForReapplication:
           type: string
         meansAssessmentRequired:
@@ -272,7 +277,7 @@ components:
         modifiedBy:
           type: string
 
-    DeclarationResponse:
+    Declaration:
       type: object
       properties:
         id:
@@ -293,7 +298,7 @@ components:
         modifiedBy:
           type: string
 
-    EvidenceResponse:
+    Evidence:
       type: object
       properties:
         id:
@@ -320,6 +325,59 @@ components:
         modifiedBy:
           type: string
 
+    ClientDetails:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        fullName:
+          type: string
+        dateOfBirth:
+          type: string
+          format: date
+        niNumber:
+          type: string
+        hasFixedAddress:
+          type: boolean
+        address:
+          $ref: "#/components/schemas/Address"
+        createdAt:
+          type: string
+          format: date-time
+        modifiedAt:
+          type: string
+          format: date-time
+
+    Address:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        addressLine1:
+          type: string
+        addressLine2:
+          type: string
+        addressLine3:
+          type: string
+        addressLine4:
+          type: string
+        townOrCity:
+          type: string
+        postCode:
+          type: string
+        county:
+          type: string
+        country:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        modifiedAt:
+          type: string
+          format: date-time
+
     ClientDeclarationStatus:
       type: string
       enum:
@@ -328,7 +386,7 @@ components:
       type: string
       enum:
         - DRAFT
-    ApplicationState:
+    ApplicationStatus:
       type: string
       enum:
         - DRAFT
